--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,19 +1,4 @@
 <h1>New product</h1>
 
-<%= form_with model: @product do |form| %>
-  <div>
-    <div>
-      <%= form.label :name %>
-    </div>
-    <% @product.errors.full_messages_for(:name).each do |msg| %>
-      <%= msg %><br>
-    <% end %>
-    <div>
-      <%= form.text_field :name %>
-    </div>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= render "form", product: @product %>
+<%= link_to "Cancel", products_path %>
